Add font from Google font and link stylesheet.css to html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <title>Kids English Club</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/favicon/ballon_7281033.png">
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!-- Header -->
+    <header>Header</header>
+    <!-- Main Content -->
+    <main>Content</main>
+    <!-- Footer -->
+    <footer>Footer</footer>
     
 </body>
 </html>
