Add 'Architects Daughter' font to h1, add logo image and name image. Adjust position of image and name using flex property

--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
 </head>
 <body>
     <!-- Header -->
-    <header>Header</header>
+    <header>
+        <div id="logo-image-name-container">
+            <div id="logo-image-container">
+                <img src="assets/favicon/ballon_7281033.png" alt="Red and Union Jack Ballon">
+            </div>
+            <div id="logo-name-container">
+                <h1>Kids English club</h1>
+            </div>
+        </div>
+    </header>
     <!-- Main Content -->
     <main>Content</main>
     <!-- Footer -->
