Add a tag to header to navagate to home screen when tab. Set header position to fixed. Remove styleing from header logo and name

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <!-- Header -->
     <header>
+        <a href="index.html">
         <div id="logo-image-name-container">
             <div id="logo-image-container">
                 <img src="assets/favicon/ballon_7281033.png" alt="Red and Union Jack Ballon">
@@ -25,6 +26,7 @@
                 <h1>Kids English club</h1>
             </div>
         </div>
+        </a>
     </header>
     <!-- Main Content -->
     <main>Content</main>
