--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
             </div>
         </div>
         </a>
+        <nav>
+        <ul id="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="courses.html">Courses</a></li>
+            <li><a href="picture-gallery.html">Picture-Gallery</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <nav>
     </header>
     <!-- Main Content -->
     <main>Content</main>
