--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <nav>
         <ul id="menu">
             <li><a href="index.html">Home</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="courses.html">Courses</a></li>
             <li><a href="picture-gallery.html">Picture-Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
