--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </a>
         <nav>
         <ul id="menu">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="courses.html">Courses</a></li>
             <li><a href="picture-gallery.html">Picture-Gallery</a></li>
