--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             </div>
         </div>
         </a>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
         <ul id="menu">
             <li><a href="index.html" class="active">Home</a></li>
