Add margin topto main element so it appears under fixed header

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <nav>
     </header>
     <!-- Main Content -->
-    <main>Content</main>
+    <main>Main content</main>
     <!-- Footer -->
     <footer>Footer</footer>
     
