--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description"
         content="Kids English Club. English Club for kids in Narathaiwat, Thailand. Courses for children and teenager, Face-to-Face and Online learning">
-    <meta name="keywords" content="kids english club, english, fun, activites, children, teenager, speaking, reading, Narathaiwat, Thailand">
+    <meta name="keywords"
+        content="kids english club, english, fun, activites, children, teenager, speaking, reading, Narathaiwat, Thailand">
     <!-- Title -->
     <title>Kids English Club</title>
     <!-- Favicon -->
@@ -14,35 +16,45 @@
     <!-- Style Sheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!-- Header -->
     <header>
         <a href="index.html">
-        <div id="logo-image-name-container">
-            <div id="logo-image-container">
-                <img src="assets/favicon/ballon_7281033.png" alt="Red and Union Jack Ballon">
+            <div id="logo-image-name-container">
+                <div id="logo-image-container">
+                    <img src="assets/favicon/ballon_7281033.png" alt="Red and Union Jack Ballon">
+                </div>
+                <div id="logo-name-container">
+                    <h1>Kids English club</h1>
+                </div>
             </div>
-            <div id="logo-name-container">
-                <h1>Kids English club</h1>
-            </div>
-        </div>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
-        <ul id="menu">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="courses.html">Courses</a></li>
-            <li><a href="picture-gallery.html">Picture-Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <nav>
+            <ul id="menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="picture-gallery.html">Picture-Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <nav>
     </header>
     <!-- Main Content -->
     <main>Main content</main>
     <!-- Footer -->
-    <footer>Footer</footer>
-    
+    <footer>
+        <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-f"></i></a></li>
+            
+
+        </ul>
+    </footer>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/a9cd148185.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
