--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             <nav>
     </header>
     <!-- Main Content -->
-    <main>Main content</main>
+    <main>Main Content</main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
