--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             <nav>
     </header>
     <!-- Main Content -->
-    <main>Main content</main>
+    <main>
+        <section id="hero">
+
+        </section>
+    </main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
