Add cover text with an attractive quote

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     <!-- Main Content -->
     <main>
         <section id="hero">
+            <div id="cover-text">
+                <h2>Our English Clubs are full of joy!</h2>
+            </div>
 
         </section>
     </main>
