Create styling template for section title. Add about us section title

--- a/index.html
+++ b/index.html
@@ -48,8 +48,16 @@
             <div id="cover-text">
                 <h2>Our English Clubs are full of joy!</h2>
             </div>
-
         </section>
+        <div class="section-title-container">
+            <section>
+                <div class="section-title" id="about-us">
+                    <h2 class="nested">
+                        <span class="headline">About us</span>
+                    </h2>
+                </div>
+            </section>
+        </div>
     </main>
     <!-- Footer -->
     <footer>
