--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#about-us">About Us</a></li>
                 <li><a href="courses.html">Courses</a></li>
                 <li><a href="picture-gallery.html">Picture-Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -55,6 +55,14 @@
                     <h2 class="nested">
                         <span class="headline">About us</span>
                     </h2>
+                </div>
+            </section>
+            <section >
+                <div class="section-pic-description">
+                    <div class="picholder">
+                        <img src="assets/images/smiley-teacher-classroom.jpg" class="section-image" alt="Teacher smiling in a classroom with 3 students">
+                    </div>
+
                 </div>
             </section>
         </div>
