Fix title alignment. Adjust photo width. Add description to about us section. Link about us nav to its id

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
                     <div class="picholder">
                         <img src="assets/images/smiley-teacher-classroom.jpg" class="section-image" alt="Teacher smiling in a classroom with 3 students">
                     </div>
-
+                    <p class="description">Welcome to Kids English Club! At our club, we pride ourselves 
+                        in developing a love of the English Language through fun, stimulating and thought-provoking activities. 
+                    </p>
                 </div>
             </section>
         </div>
