Add reasons section. Add first image to the section with text next to it

--- a/index.html
+++ b/index.html
@@ -67,6 +67,25 @@
                     </p>
                 </div>
             </section>
+            <section>
+                <div class="section-title" id="reasons">
+                    <h2 class="nested">
+                        <span class="headline">Why learning English with us?</span>
+                    </h2>
+                </div>
+            </section>
+            <section class="image-description-side">
+                <div class="picholder-description-side">
+                    <img src="assets/images/portrait-professor-work-educational-system.jpg" class="section-image-portrait" 
+                            alt="Male teacher holding an opened book while teaching 3 students">
+                </div>
+                <div class="description-side">
+                    <h5 class="nested">Our caring approach</h5>
+                    <p class="reasons-text">We pride ourselves on creating a fun and friendly learning environment, 
+                        and in getting to know all our students personally. 
+                    </p>
+                </div>
+            </section>
         </div>
     </main>
     <!-- Footer -->
