Add all tthree reasons to the reasons section with imagages

--- a/index.html
+++ b/index.html
@@ -76,13 +76,37 @@
             </section>
             <section class="image-description-side">
                 <div class="picholder-description-side">
-                    <img src="assets/images/portrait-professor-work-educational-system.jpg" class="section-image-portrait" 
+                    <img src="assets/images/portrait-professor-work-educational-system.jpg" class="section-image-portrait padding-right" 
                             alt="Male teacher holding an opened book while teaching 3 students">
                 </div>
                 <div class="description-side">
                     <h5 class="nested">Our caring approach</h5>
                     <p class="reasons-text">We pride ourselves on creating a fun and friendly learning environment, 
                         and in getting to know all our students personally. 
+                    </p>
+                </div>
+            </section>
+            <section class="image-description-side">
+                <div class="description-side">
+                    <h5 class="nested">Our caring approach</h5>
+                    <p class="reasons-text">We pride ourselves on creating a fun and friendly learning environment, 
+                        and in getting to know all our students personally. 
+                    </p>
+                </div>
+                <div class="picholder-description-side">
+                    <img src="assets/images/smiley-teacher-classroom (1).jpg" class="section-image-portrait padding-left" 
+                            alt="Female teaching asking question to three students">
+                </div>
+            </section>
+            <section class="image-description-side">
+                <div class="picholder-description-side">
+                    <img src="assets/images/full-shot-smiley-girl-running-outdoors.jpg" class="section-image-portrait padding-right" 
+                            alt="Smiley girl running on grass">
+                </div>
+                <div class="description-side">
+                    <h5 class="nested">Our location</h5>
+                    <p class="reasons-text">Locating right in the heart of welcoming and friendly community of Narathiwat 
+                        we can offer ours students the best experience the town can offer.
                     </p>
                 </div>
             </section>
