Correct deescription and title of second reason

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             </section>
             <section class="image-description-side">
                 <div class="description-side">
-                    <h5 class="nested">Our caring approach</h5>
-                    <p class="reasons-text">We pride ourselves on creating a fun and friendly learning environment, 
-                        and in getting to know all our students personally. 
+                    <h5 class="nested">Our expert tuition</h5>
+                    <p class="reasons-text">At Kids English Club, you are guaranteed a high-quality learning experience, 
+                        with some of the best teachers available.
                     </p>
                 </div>
                 <div class="picholder-description-side">
