Add quote and picture-gallery link towards the end of the page. Add title for testimonials

--- a/index.html
+++ b/index.html
@@ -110,6 +110,21 @@
                     </p>
                 </div>
             </section>
+            <section>
+                <div id="link-to-gallery">
+                    <a href="picture-gallery.html">
+                        <h2>A smile is understood all over the world.</h2>
+                        <h5>picture-gallery</h5>
+                    </a>
+                </div>
+            </section>
+            <section>
+                <div class="section-title" id="testimonials">
+                    <h2 class="nested">
+                        <span class="headline">Testimonials</span>
+                    </h2>
+                </div>
+            </section>
         </div>
     </main>
     <!-- Footer -->
