Add two testimonials

--- a/index.html
+++ b/index.html
@@ -123,6 +123,18 @@
                     <h2 class="nested">
                         <span class="headline">Testimonials</span>
                     </h2>
+                    <div id="jo-blog">
+                        <p class="testimonials-text">"For three years, we have enrolled our kids in the Kids English Club. 
+                            We choose KEC because our kids can focus on speaking, reading, 
+                            and writing in a native English language environment."</p>
+                        <p class="writer">Jo Blog, 2023</p>
+                    </div>
+                    <div id="jo-blog">
+                        <p class="testimonials-text">As parents of two children who both attended Kids English Club, 
+                            I can say without hesitation that we have been extremely happy with the lessons and teaching of 
+                            'English classes for English speakers'.</p>
+                        <p class="writer">Dylan Wong, 2023</p>
+                    </div>
                 </div>
             </section>
         </div>
