Comment out existing style for reasons section. Add new style to reasons section boxes. Add line height 1.5rem to general rule.

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <section>
                 <div class="section-title" id="reasons">
                     <h2 class="nested">
-                        <span class="headline">Why learning English with us?</span>
+                        <span class="headline">Why learn English with us?</span>
                     </h2>
                 </div>
-            </section>
+            <!-- </section>
             <section class="image-description-side">
                 <div class="picholder-description-side">
                     <img src="assets/images/portrait-professor-work-educational-system.jpg" class="section-image-portrait padding-right" 
@@ -109,6 +109,35 @@
                         we can offer ours students the best experience the town can offer.
                     </p>
                 </div>
+            </section> -->
+            <section id="reasons-container">
+                <div id="section-container-inner">
+                    <div class="reasons-box">
+                        <div class="reasons-colour-box shape-circle" id="reasons-colour-box-care">
+                            <div class="icon-box-container">
+                                <div class="icon-box-wrapper">
+                                    <div class="icon-box">
+                                        <div class="icon">
+                                            <i class="fa-solid fa-children"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="icon-box-content">
+                                    <h4 class="icon-box-title">
+                                        Our caring approach
+                                    </h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="content-box" id="content-care">
+                            <div class="content-box-inner" id="content-box-inner-care">
+                                <p>We pride ourselves on creating a fun and friendly learning environment, 
+                                    and in getting to know all our students personally. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </section>
             <section>
                 <div id="link-to-gallery">
