Add shadow into light font from Google font and apply to all header. Fix line spacing to target only element in the section box.

--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
                     </h2>
                 </div>
             </section>
-            <section >
+            <section>
                 <div class="section-pic-description">
                     <div class="picholder">
-                        <img src="assets/images/smiley-teacher-classroom.jpg" class="section-image" alt="Teacher smiling in a classroom with 3 students">
+                        <img src="assets/images/smiley-teacher-classroom.jpg" class="section-image"
+                            alt="Teacher smiling in a classroom with 3 students">
                     </div>
-                    <p class="description">Welcome to Kids English Club! At our club, we pride ourselves 
-                        in developing a love of the English Language through fun, stimulating and thought-provoking activities. 
+                    <p class="description">Welcome to Kids English Club! At our club, we pride ourselves
+                        in developing a love of the English Language through fun, stimulating and thought-provoking
+                        activities.
                     </p>
                 </div>
             </section>
@@ -73,7 +75,7 @@
                         <span class="headline">Why learn English with us?</span>
                     </h2>
                 </div>
-            <!-- </section>
+                <!-- </section>
             <section class="image-description-side">
                 <div class="picholder-description-side">
                     <img src="assets/images/portrait-professor-work-educational-system.jpg" class="section-image-portrait padding-right" 
@@ -110,62 +112,111 @@
                     </p>
                 </div>
             </section> -->
-            <section id="reasons-container">
-                <div id="section-container-inner">
-                    <div class="reasons-box">
-                        <div class="reasons-colour-box shape-circle" id="reasons-colour-box-care">
-                            <div class="icon-box-container">
-                                <div class="icon-box-wrapper">
-                                    <div class="icon-box">
-                                        <div class="icon">
-                                            <i class="fa-solid fa-children"></i>
+                <section id="reasons-container">
+                    <div id="section-container-inner">
+                        <div class="reasons-box">
+                            <div class="reasons-colour-box shape-circle" id="reasons-colour-box-care">
+                                <div class="icon-box-container">
+                                    <div class="icon-box-wrapper">
+                                        <div class="icon-box">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-children"></i>
+                                            </div>
                                         </div>
                                     </div>
+                                    <div class="icon-box-content">
+                                        <h4 class="icon-box-title">
+                                            Our caring approach
+                                        </h4>
+                                    </div>
                                 </div>
-                                <div class="icon-box-content">
-                                    <h4 class="icon-box-title">
-                                        Our caring approach
-                                    </h4>
+                            </div>
+                            <div class="content-box" id="content-care">
+                                <div class="content-box-inner" id="content-box-inner-care">
+                                    <p>We pride ourselves on creating a fun and friendly learning environment,
+                                        and in getting to know all our students personally. </p>
                                 </div>
                             </div>
                         </div>
-                        <div class="content-box" id="content-care">
-                            <div class="content-box-inner" id="content-box-inner-care">
-                                <p>We pride ourselves on creating a fun and friendly learning environment, 
-                                    and in getting to know all our students personally. </p>
+                        <div class="reasons-box">
+                            <div class="reasons-colour-box shape-circle" id="reasons-colour-box-expert">
+                                <div class="icon-box-container">
+                                    <div class="icon-box-wrapper">
+                                        <div class="icon-box">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-chalkboard-user"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="icon-box-content">
+                                        <h4 class="icon-box-title">
+                                            Our expert tuition
+                                        </h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box" id="content-expert">
+                                <div class="content-box-inner" id="content-box-inner-expert">
+                                    <p>At Kids English Club, you are guaranteed a high-quality learning experience, 
+                                        with some of the best teachers available.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reasons-box">
+                            <div class="reasons-colour-box shape-circle" id="reasons-colour-box-location">
+                                <div class="icon-box-container">
+                                    <div class="icon-box-wrapper">
+                                        <div class="icon-box">
+                                            <div class="icon">
+                                                <i class="fa-solid fa-tree-city"></i>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="icon-box-content">
+                                        <h4 class="icon-box-title">
+                                            Our location
+                                        </h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box" id="content-location">
+                                <div class="content-box-inner" id="content-box-inner-location">
+                                    <p>Locating right in the heart of welcoming and friendly community of Narathiwat 
+                                        we can offer ours students the best experience the town can offer.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-
-            </section>
-            <section>
-                <div id="link-to-gallery">
-                    <a href="picture-gallery.html">
-                        <h2>A smile is understood all over the world.</h2>
-                        <h5>picture-gallery</h5>
-                    </a>
-                </div>
-            </section>
-            <section>
-                <div class="section-title" id="testimonials">
-                    <h2 class="nested">
-                        <span class="headline">Testimonials</span>
-                    </h2>
-                    <div id="jo-blog">
-                        <p class="testimonials-text">"For three years, we have enrolled our kids in the Kids English Club. 
-                            We choose KEC because our kids can focus on speaking, reading, 
-                            and writing in a native English language environment."</p>
-                        <p class="writer">Jo Blog, 2023</p>
+                </section>
+                <section>
+                    <div id="link-to-gallery">
+                        <a href="picture-gallery.html">
+                            <h2>A smile is understood all over the world.</h2>
+                            <h5>picture-gallery</h5>
+                        </a>
                     </div>
-                    <div id="jo-blog">
-                        <p class="testimonials-text">As parents of two children who both attended Kids English Club, 
-                            I can say without hesitation that we have been extremely happy with the lessons and teaching of 
-                            'English classes for English speakers'.</p>
-                        <p class="writer">Dylan Wong, 2023</p>
+                </section>
+                <section>
+                    <div class="section-title" id="testimonials">
+                        <h2 class="nested">
+                            <span class="headline">Testimonials</span>
+                        </h2>
+                        <div id="jo-blog">
+                            <p class="testimonials-text">"For three years, we have enrolled our kids in the Kids English
+                                Club.
+                                We choose KEC because our kids can focus on speaking, reading,
+                                and writing in a native English language environment."</p>
+                            <p class="writer">Jo Blog, 2023</p>
+                        </div>
+                        <div id="jo-blog">
+                            <p class="testimonials-text">As parents of two children who both attended Kids English Club,
+                                I can say without hesitation that we have been extremely happy with the lessons and
+                                teaching of
+                                'English classes for English speakers'.</p>
+                            <p class="writer">Dylan Wong, 2023</p>
+                        </div>
                     </div>
-                </div>
-            </section>
+                </section>
         </div>
     </main>
     <!-- Footer -->
