--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
                     </div>
                 </section>
                 <section>
+                    <div id="thinking-kid-image">
+                        <div id="circular-cover-bg"></div>
+                    </div>
+                </section>
+                <section>
                     <div id="link-to-gallery">
                         <a href="picture-gallery.html">
                             <h2>A smile is understood all over the world.</h2>
