--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
             <section>
                 <div class="section-pic-description">
                     <div class="picholder">
-                        <img src="assets/images/smiley-teacher-classroom.jpg" class="section-image"
+                        <div class="inner-picholder">
+                            <img src="assets/images/smiley-teacher-classroom.jpg" class="section-image"
                             alt="Teacher smiling in a classroom with 3 students">
+                        </div>
                     </div>
                     <p class="description">Welcome to Kids English Club! At our club, we pride ourselves
                         in developing a love of the English Language through fun, stimulating and thought-provoking
