Add courses overview section with image and style.

--- a/index.html
+++ b/index.html
@@ -191,6 +191,66 @@
                     </div>
                 </section>
                 <section>
+                    <div class="section-title" id="about-us">
+                        <h2 class="nested">
+                            <span class="headline">Courses overview</span>
+                        </h2>
+                    </div>
+                </section>
+                <!-- Courses Overview -->
+                <section id="reasons-container courses-container">
+                    <div id="section-container-inner courses-container">
+                        <div class="reasons-box">
+                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
+                                <div class="image-box-container">
+                                    <div class="image-box-container-inner">
+                                        <img src="assets/images/children-are-interested-learning.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box" id="content-care">
+                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
+                                    <h4>Courses for infants and children</h4>
+                                    <p>We pride ourselves on creating a fun and friendly learning environment,
+                                        and in getting to know all our students personally. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reasons-box">
+                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
+                                <div class="image-box-container">
+                                    <div class="image-box-container-inner">
+                                        <img src="assets/images/children-are-interested-learning.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box" id="content-care">
+                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
+                                    <h4>Courses for infants and children</h4>
+                                    <p>We pride ourselves on creating a fun and friendly learning environment,
+                                        and in getting to know all our students personally. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="reasons-box">
+                            <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
+                                <div class="image-box-container">
+                                    <div class="image-box-container-inner">
+                                        <img src="assets/images/children-are-interested-learning.jpg" class="courses-image" alt="Child is holding pencil in a classroom">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content-box" id="content-care">
+                                <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
+                                    <h4>Courses for infants and children</h4>
+                                    <p>We pride ourselves on creating a fun and friendly learning environment,
+                                        and in getting to know all our students personally. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section>
                     <div id="thinking-kid-image">
                         <div id="circular-cover-bg"></div>
                     </div>
