--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <img src="assets/favicon/ballon_7281033.png" alt="Red and Union Jack Ballon">
                 </div>
                 <div id="logo-name-container">
-                    <h1>Kids English club</h1>
+                    <h2>Kids English club</h2>
                 </div>
             </div>
         </a>
@@ -211,6 +211,15 @@
                             <div class="content-box" id="content-care">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
                                     <h4>Courses for infants and children</h4>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner">
+                                            <div class="courses-day-icon-container">
+                                                <div class="courses-day-icon-container-inner">
+                                                    <img src="" alt="">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <p>We pride ourselves on creating a fun and friendly learning environment,
                                         and in getting to know all our students personally. </p>
                                 </div>
