Add container for courses icon and content to first course preview.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,10 @@
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
                                                 <div class="courses-day-icon-container-inner">
-                                                    <img src="" alt="">
+                                                    <img src="assets/images/calendar-icon.png" class="courses-day-icon" alt="Red calendar icon">
+                                                </div>
+                                                <div calss="courses-day-content">
+                                                    <p>Monday to Friday</p>
                                                 </div>
                                             </div>
                                         </div>
