Add time icon and time to courses box.

--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
                             <div class="content-box" id="content-care">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
                                     <h4>Courses for infants and children</h4>
+                                    <p>We pride ourselves on creating a fun and friendly learning environment,
+                                        and in getting to know all our students personally. </p>
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
@@ -221,8 +223,16 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <p>We pride ourselves on creating a fun and friendly learning environment,
-                                        and in getting to know all our students personally. </p>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner courses-time">
+                                            <div class="courses-day-icon-container courses-time-inner">
+                                                <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
+                                            </div>
+                                            <div calss="courses-day-content">
+                                                <p>9am to 11am</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -286,11 +296,11 @@
                             <p class="writer">Jo Blog, 2023</p>
                         </div>
                         <div id="jo-blog">
-                            <p class="testimonials-text">As parents of two children who both attended Kids English Club,
+                            <p class="testimonials-text">"As parents of two children who both attended Kids English Club,
                                 I can say without hesitation that we have been extremely happy with the lessons and
                                 teaching of
-                                'English classes for English speakers'.</p>
-                            <p class="writer">Dylan Wong, 2023</p>
+                                'English classes for English speakers'".</p>
+                            <p class="writer">Dylan Wong, 2024</p>
                         </div>
                     </div>
                 </section>
