Add age icon and age range information to courses content of first course.

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                             <div class="content-box" id="content-care">
                                 <div class="content-box-inner content-box-inner-courses" id="content-box-inner-care content-box-inner-infant">
                                     <h4>Courses for infants and children</h4>
-                                    <p>We pride ourselves on creating a fun and friendly learning environment,
-                                        and in getting to know all our students personally. </p>
+                                    <p>Step by step! Learn English at a young age with lots of fun and enjoyment. 
+                                        At Mortimer you will never be bored. </p>
                                     <div class="courses-day-icon-content-container">
                                         <div class="courses-day-icon-content-container-inner">
                                             <div class="courses-day-icon-container">
@@ -229,7 +229,17 @@
                                                 <img src="assets/images/hourglass.png" class="courses-day-icon courses-time-icon" alt="Brown hourglass">
                                             </div>
                                             <div calss="courses-day-content">
-                                                <p>9am to 11am</p>
+                                                <p>9am to 12pm</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="courses-day-icon-content-container">
+                                        <div class="courses-day-icon-content-container-inner courses-age">
+                                            <div class="courses-day-icon-container courses-age-inner">
+                                                <img src="assets/images/age-group.png" class="courses-day-icon courses-age-icon" alt="Four children">
+                                            </div>
+                                            <div calss="courses-day-content">
+                                                <p>Age Range: 2 - 4</p>
                                             </div>
                                         </div>
                                     </div>
