Add find out more button to courses and style to center.

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <!-- Courses Overview -->
                 <section id="reasons-container courses-container">
                     <div id="section-container-inner courses-container">
-                        <div class="reasons-box">
+                        <div class="reasons-box courses-box">
                             <div class="reasons-colour-box courses-colour-box shape-circle" id="courses-colour-box-infant">
                                 <div class="image-box-container">
                                     <div class="image-box-container-inner">
@@ -241,6 +241,11 @@
                                             <div calss="courses-day-content">
                                                 <p>Age Range: 2 - 4</p>
                                             </div>
+                                        </div>
+                                    </div>
+                                    <div class="button-container">
+                                        <div class="button-container-inner">
+                                            <a href="courses.html"><h5>Find out more</h5></a>
                                         </div>
                                     </div>
                                 </div>
